parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON return_vars MAIN body END
Rule 2     program -> PROGRAM ID SEMICOLON MAIN body END
Rule 3     return_vars -> vars
Rule 4     return_vars -> return_vars vars
Rule 5     vars -> VAR list_vars COLON type SEMICOLON
Rule 6     vars -> list_vars COLON type SEMICOLON
Rule 7     list_vars -> ID
Rule 8     list_vars -> list_vars COMMA ID
Rule 9     type -> INT
Rule 10    type -> FLOAT
Rule 11    return_statement -> statement
Rule 12    return_statement -> return_statement statement
Rule 13    body -> LBRACE return_statement RBRACE
Rule 14    statement -> assign
Rule 15    statement -> condition
Rule 16    statement -> cycle
Rule 17    statement -> print
Rule 18    statement -> empty
Rule 19    assign -> ID seen_assign_ID EQUAL seen_term_EQUAL expression seen_exp_quad_E SEMICOLON
Rule 20    seen_assign_ID -> <empty>
Rule 21    seen_term_EQUAL -> <empty>
Rule 22    seen_exp_quad_E -> <empty>
Rule 23    condition -> IF LPAREN expression seen_condition_IF RPAREN body SEMICOLON
Rule 24    condition -> IF LPAREN expression seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON
Rule 25    seen_condition_IF -> <empty>
Rule 26    seen_condition_else -> <empty>
Rule 27    cycle -> DO seen_start_cycle body WHILE LPAREN expression seen_cycle RPAREN SEMICOLON
Rule 28    seen_cycle -> <empty>
Rule 29    seen_start_cycle -> <empty>
Rule 30    print -> PRINT seen_print_PRINT LPAREN list_print_expression RPAREN SEMICOLON
Rule 31    print -> PRINT seen_print_PRINT LPAREN list_print_cte RPAREN SEMICOLON
Rule 32    list_print_expression -> expression seen_print_quad_PRINT
Rule 33    list_print_expression -> list_print_expression COMMA seen_print_PARINT_COMMA expression seen_print_quad_PRINT
Rule 34    list_print_cte -> CTE_STRING
Rule 35    list_print_cte -> list_print_cte COMMA CTE_STRING
Rule 36    seen_print_PRINT -> <empty>
Rule 37    seen_print_PARINT_COMMA -> <empty>
Rule 38    seen_print_quad_PRINT -> <empty>
Rule 39    expression -> exp
Rule 40    expression -> exp GT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
Rule 41    expression -> exp LT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
Rule 42    expression -> exp NE seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
Rule 43    seen_exp_GT_LT_NE -> <empty>
Rule 44    seen_exp_quad_G_L_N -> <empty>
Rule 45    exp -> term
Rule 46    exp -> exp PLUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
Rule 47    exp -> exp MINUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
Rule 48    seen_exp_PLUS_MINUS -> <empty>
Rule 49    seen_exp_quad_P_M -> <empty>
Rule 50    term -> factor
Rule 51    term -> term TIMES seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
Rule 52    term -> term DIVIDE seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
Rule 53    seen_term_TIMES_DIVIDE -> <empty>
Rule 54    seen_exp_quad_T_D -> <empty>
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    factor -> PLUS ID seen_factor_ID verify_declaration
Rule 57    factor -> MINUS ID seen_factor_ID verify_declaration
Rule 58    factor -> PLUS cte
Rule 59    factor -> MINUS cte
Rule 60    factor -> ID seen_factor_ID verify_declaration
Rule 61    factor -> cte
Rule 62    seen_factor_ID -> <empty>
Rule 63    verify_declaration -> <empty>
Rule 64    cte -> CTE_INT seen_INT
Rule 65    cte -> CTE_FLOAT seen_FLOAT
Rule 66    seen_INT -> <empty>
Rule 67    seen_FLOAT -> <empty>
Rule 68    empty -> <empty>

Terminals, with rules where they appear

COLON                : 5 6
COMMA                : 8 33 35
CTE_FLOAT            : 65
CTE_INT              : 64
CTE_STRING           : 34 35
DIVIDE               : 52
DO                   : 27
ELSE                 : 24
END                  : 1 2
EQUAL                : 19
FLOAT                : 10
GT                   : 40
ID                   : 1 2 7 8 19 56 57 60
IF                   : 23 24
INT                  : 9
LBRACE               : 13
LPAREN               : 23 24 27 30 31 55
LT                   : 41
MAIN                 : 1 2
MINUS                : 47 57 59
NE                   : 42
PLUS                 : 46 56 58
PRINT                : 30 31
PROGRAM              : 1 2
RBRACE               : 13
RPAREN               : 23 24 27 30 31 55
SEMICOLON            : 1 2 5 6 19 23 24 27 30 31
TIMES                : 51
VAR                  : 5
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

assign               : 14
body                 : 1 2 23 24 24 27
condition            : 15
cte                  : 58 59 61
cycle                : 16
empty                : 18
exp                  : 39 40 40 41 41 42 42 46 47
expression           : 19 23 24 27 32 33 55
factor               : 50 51 52
list_print_cte       : 31 35
list_print_expression : 30 33
list_vars            : 5 6 8
print                : 17
program              : 0
return_statement     : 12 13
return_vars          : 1 4
seen_FLOAT           : 65
seen_INT             : 64
seen_assign_ID       : 19
seen_condition_IF    : 23 24
seen_condition_else  : 24
seen_cycle           : 27
seen_exp_GT_LT_NE    : 40 41 42
seen_exp_PLUS_MINUS  : 46 47
seen_exp_quad_E      : 19
seen_exp_quad_G_L_N  : 40 41 42
seen_exp_quad_P_M    : 46 47
seen_exp_quad_T_D    : 51 52
seen_factor_ID       : 56 57 60
seen_print_PARINT_COMMA : 33
seen_print_PRINT     : 30 31
seen_print_quad_PRINT : 32 33
seen_start_cycle     : 27
seen_term_EQUAL      : 19
seen_term_TIMES_DIVIDE : 51 52
statement            : 11 12
term                 : 45 46 47 51 52
type                 : 5 6
vars                 : 3 4
verify_declaration   : 56 57 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON return_vars MAIN body END
    (2) program -> . PROGRAM ID SEMICOLON MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON return_vars MAIN body END
    (2) program -> PROGRAM . ID SEMICOLON MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON return_vars MAIN body END
    (2) program -> PROGRAM ID . SEMICOLON MAIN body END

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . return_vars MAIN body END
    (2) program -> PROGRAM ID SEMICOLON . MAIN body END
    (3) return_vars -> . vars
    (4) return_vars -> . return_vars vars
    (5) vars -> . VAR list_vars COLON type SEMICOLON
    (6) vars -> . list_vars COLON type SEMICOLON
    (7) list_vars -> . ID
    (8) list_vars -> . list_vars COMMA ID

    MAIN            shift and go to state 7
    VAR             shift and go to state 9
    ID              shift and go to state 5

    return_vars                    shift and go to state 6
    vars                           shift and go to state 8
    list_vars                      shift and go to state 10

state 5

    (7) list_vars -> ID .

    COLON           reduce using rule 7 (list_vars -> ID .)
    COMMA           reduce using rule 7 (list_vars -> ID .)


state 6

    (1) program -> PROGRAM ID SEMICOLON return_vars . MAIN body END
    (4) return_vars -> return_vars . vars
    (5) vars -> . VAR list_vars COLON type SEMICOLON
    (6) vars -> . list_vars COLON type SEMICOLON
    (7) list_vars -> . ID
    (8) list_vars -> . list_vars COMMA ID

    MAIN            shift and go to state 11
    VAR             shift and go to state 9
    ID              shift and go to state 5

    vars                           shift and go to state 12
    list_vars                      shift and go to state 10

state 7

    (2) program -> PROGRAM ID SEMICOLON MAIN . body END
    (13) body -> . LBRACE return_statement RBRACE

    LBRACE          shift and go to state 14

    body                           shift and go to state 13

state 8

    (3) return_vars -> vars .

    MAIN            reduce using rule 3 (return_vars -> vars .)
    VAR             reduce using rule 3 (return_vars -> vars .)
    ID              reduce using rule 3 (return_vars -> vars .)


state 9

    (5) vars -> VAR . list_vars COLON type SEMICOLON
    (7) list_vars -> . ID
    (8) list_vars -> . list_vars COMMA ID

    ID              shift and go to state 5

    list_vars                      shift and go to state 15

state 10

    (6) vars -> list_vars . COLON type SEMICOLON
    (8) list_vars -> list_vars . COMMA ID

    COLON           shift and go to state 16
    COMMA           shift and go to state 17


state 11

    (1) program -> PROGRAM ID SEMICOLON return_vars MAIN . body END
    (13) body -> . LBRACE return_statement RBRACE

    LBRACE          shift and go to state 14

    body                           shift and go to state 18

state 12

    (4) return_vars -> return_vars vars .

    MAIN            reduce using rule 4 (return_vars -> return_vars vars .)
    VAR             reduce using rule 4 (return_vars -> return_vars vars .)
    ID              reduce using rule 4 (return_vars -> return_vars vars .)


state 13

    (2) program -> PROGRAM ID SEMICOLON MAIN body . END

    END             shift and go to state 19


state 14

    (13) body -> LBRACE . return_statement RBRACE
    (11) return_statement -> . statement
    (12) return_statement -> . return_statement statement
    (14) statement -> . assign
    (15) statement -> . condition
    (16) statement -> . cycle
    (17) statement -> . print
    (18) statement -> . empty
    (19) assign -> . ID seen_assign_ID EQUAL seen_term_EQUAL expression seen_exp_quad_E SEMICOLON
    (23) condition -> . IF LPAREN expression seen_condition_IF RPAREN body SEMICOLON
    (24) condition -> . IF LPAREN expression seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON
    (27) cycle -> . DO seen_start_cycle body WHILE LPAREN expression seen_cycle RPAREN SEMICOLON
    (30) print -> . PRINT seen_print_PRINT LPAREN list_print_expression RPAREN SEMICOLON
    (31) print -> . PRINT seen_print_PRINT LPAREN list_print_cte RPAREN SEMICOLON
    (68) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    ID              shift and go to state 27
    IF              shift and go to state 28
    DO              shift and go to state 29
    PRINT           shift and go to state 30
    RBRACE          reduce using rule 68 (empty -> .)

  ! ID              [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! DO              [ reduce using rule 68 (empty -> .) ]
  ! PRINT           [ reduce using rule 68 (empty -> .) ]

    return_statement               shift and go to state 20
    statement                      shift and go to state 21
    assign                         shift and go to state 22
    condition                      shift and go to state 23
    cycle                          shift and go to state 24
    print                          shift and go to state 25
    empty                          shift and go to state 26

state 15

    (5) vars -> VAR list_vars . COLON type SEMICOLON
    (8) list_vars -> list_vars . COMMA ID

    COLON           shift and go to state 31
    COMMA           shift and go to state 17


state 16

    (6) vars -> list_vars COLON . type SEMICOLON
    (9) type -> . INT
    (10) type -> . FLOAT

    INT             shift and go to state 33
    FLOAT           shift and go to state 34

    type                           shift and go to state 32

state 17

    (8) list_vars -> list_vars COMMA . ID

    ID              shift and go to state 35


state 18

    (1) program -> PROGRAM ID SEMICOLON return_vars MAIN body . END

    END             shift and go to state 36


state 19

    (2) program -> PROGRAM ID SEMICOLON MAIN body END .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON MAIN body END .)


state 20

    (13) body -> LBRACE return_statement . RBRACE
    (12) return_statement -> return_statement . statement
    (14) statement -> . assign
    (15) statement -> . condition
    (16) statement -> . cycle
    (17) statement -> . print
    (18) statement -> . empty
    (19) assign -> . ID seen_assign_ID EQUAL seen_term_EQUAL expression seen_exp_quad_E SEMICOLON
    (23) condition -> . IF LPAREN expression seen_condition_IF RPAREN body SEMICOLON
    (24) condition -> . IF LPAREN expression seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON
    (27) cycle -> . DO seen_start_cycle body WHILE LPAREN expression seen_cycle RPAREN SEMICOLON
    (30) print -> . PRINT seen_print_PRINT LPAREN list_print_expression RPAREN SEMICOLON
    (31) print -> . PRINT seen_print_PRINT LPAREN list_print_cte RPAREN SEMICOLON
    (68) empty -> .

  ! shift/reduce conflict for RBRACE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    RBRACE          shift and go to state 37
    ID              shift and go to state 27
    IF              shift and go to state 28
    DO              shift and go to state 29
    PRINT           shift and go to state 30

  ! RBRACE          [ reduce using rule 68 (empty -> .) ]
  ! ID              [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! DO              [ reduce using rule 68 (empty -> .) ]
  ! PRINT           [ reduce using rule 68 (empty -> .) ]

    statement                      shift and go to state 38
    assign                         shift and go to state 22
    condition                      shift and go to state 23
    cycle                          shift and go to state 24
    print                          shift and go to state 25
    empty                          shift and go to state 26

state 21

    (11) return_statement -> statement .

    RBRACE          reduce using rule 11 (return_statement -> statement .)
    ID              reduce using rule 11 (return_statement -> statement .)
    IF              reduce using rule 11 (return_statement -> statement .)
    DO              reduce using rule 11 (return_statement -> statement .)
    PRINT           reduce using rule 11 (return_statement -> statement .)


state 22

    (14) statement -> assign .

    RBRACE          reduce using rule 14 (statement -> assign .)
    ID              reduce using rule 14 (statement -> assign .)
    IF              reduce using rule 14 (statement -> assign .)
    DO              reduce using rule 14 (statement -> assign .)
    PRINT           reduce using rule 14 (statement -> assign .)


state 23

    (15) statement -> condition .

    RBRACE          reduce using rule 15 (statement -> condition .)
    ID              reduce using rule 15 (statement -> condition .)
    IF              reduce using rule 15 (statement -> condition .)
    DO              reduce using rule 15 (statement -> condition .)
    PRINT           reduce using rule 15 (statement -> condition .)


state 24

    (16) statement -> cycle .

    RBRACE          reduce using rule 16 (statement -> cycle .)
    ID              reduce using rule 16 (statement -> cycle .)
    IF              reduce using rule 16 (statement -> cycle .)
    DO              reduce using rule 16 (statement -> cycle .)
    PRINT           reduce using rule 16 (statement -> cycle .)


state 25

    (17) statement -> print .

    RBRACE          reduce using rule 17 (statement -> print .)
    ID              reduce using rule 17 (statement -> print .)
    IF              reduce using rule 17 (statement -> print .)
    DO              reduce using rule 17 (statement -> print .)
    PRINT           reduce using rule 17 (statement -> print .)


state 26

    (18) statement -> empty .

    RBRACE          reduce using rule 18 (statement -> empty .)
    ID              reduce using rule 18 (statement -> empty .)
    IF              reduce using rule 18 (statement -> empty .)
    DO              reduce using rule 18 (statement -> empty .)
    PRINT           reduce using rule 18 (statement -> empty .)


state 27

    (19) assign -> ID . seen_assign_ID EQUAL seen_term_EQUAL expression seen_exp_quad_E SEMICOLON
    (20) seen_assign_ID -> .

    EQUAL           reduce using rule 20 (seen_assign_ID -> .)

    seen_assign_ID                 shift and go to state 39

state 28

    (23) condition -> IF . LPAREN expression seen_condition_IF RPAREN body SEMICOLON
    (24) condition -> IF . LPAREN expression seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON

    LPAREN          shift and go to state 40


state 29

    (27) cycle -> DO . seen_start_cycle body WHILE LPAREN expression seen_cycle RPAREN SEMICOLON
    (29) seen_start_cycle -> .

    LBRACE          reduce using rule 29 (seen_start_cycle -> .)

    seen_start_cycle               shift and go to state 41

state 30

    (30) print -> PRINT . seen_print_PRINT LPAREN list_print_expression RPAREN SEMICOLON
    (31) print -> PRINT . seen_print_PRINT LPAREN list_print_cte RPAREN SEMICOLON
    (36) seen_print_PRINT -> .

    LPAREN          reduce using rule 36 (seen_print_PRINT -> .)

    seen_print_PRINT               shift and go to state 42

state 31

    (5) vars -> VAR list_vars COLON . type SEMICOLON
    (9) type -> . INT
    (10) type -> . FLOAT

    INT             shift and go to state 33
    FLOAT           shift and go to state 34

    type                           shift and go to state 43

state 32

    (6) vars -> list_vars COLON type . SEMICOLON

    SEMICOLON       shift and go to state 44


state 33

    (9) type -> INT .

    SEMICOLON       reduce using rule 9 (type -> INT .)


state 34

    (10) type -> FLOAT .

    SEMICOLON       reduce using rule 10 (type -> FLOAT .)


state 35

    (8) list_vars -> list_vars COMMA ID .

    COLON           reduce using rule 8 (list_vars -> list_vars COMMA ID .)
    COMMA           reduce using rule 8 (list_vars -> list_vars COMMA ID .)


state 36

    (1) program -> PROGRAM ID SEMICOLON return_vars MAIN body END .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON return_vars MAIN body END .)


state 37

    (13) body -> LBRACE return_statement RBRACE .

    END             reduce using rule 13 (body -> LBRACE return_statement RBRACE .)
    WHILE           reduce using rule 13 (body -> LBRACE return_statement RBRACE .)
    SEMICOLON       reduce using rule 13 (body -> LBRACE return_statement RBRACE .)
    ELSE            reduce using rule 13 (body -> LBRACE return_statement RBRACE .)


state 38

    (12) return_statement -> return_statement statement .

    RBRACE          reduce using rule 12 (return_statement -> return_statement statement .)
    ID              reduce using rule 12 (return_statement -> return_statement statement .)
    IF              reduce using rule 12 (return_statement -> return_statement statement .)
    DO              reduce using rule 12 (return_statement -> return_statement statement .)
    PRINT           reduce using rule 12 (return_statement -> return_statement statement .)


state 39

    (19) assign -> ID seen_assign_ID . EQUAL seen_term_EQUAL expression seen_exp_quad_E SEMICOLON

    EQUAL           shift and go to state 45


state 40

    (23) condition -> IF LPAREN . expression seen_condition_IF RPAREN body SEMICOLON
    (24) condition -> IF LPAREN . expression seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON
    (39) expression -> . exp
    (40) expression -> . exp GT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (41) expression -> . exp LT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (42) expression -> . exp NE seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (45) exp -> . term
    (46) exp -> . exp PLUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (47) exp -> . exp MINUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (50) term -> . factor
    (51) term -> . term TIMES seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (52) term -> . term DIVIDE seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (55) factor -> . LPAREN expression RPAREN
    (56) factor -> . PLUS ID seen_factor_ID verify_declaration
    (57) factor -> . MINUS ID seen_factor_ID verify_declaration
    (58) factor -> . PLUS cte
    (59) factor -> . MINUS cte
    (60) factor -> . ID seen_factor_ID verify_declaration
    (61) factor -> . cte
    (64) cte -> . CTE_INT seen_INT
    (65) cte -> . CTE_FLOAT seen_FLOAT

    LPAREN          shift and go to state 46
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    ID              shift and go to state 53
    CTE_INT         shift and go to state 55
    CTE_FLOAT       shift and go to state 56

    expression                     shift and go to state 47
    exp                            shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 52
    cte                            shift and go to state 54

state 41

    (27) cycle -> DO seen_start_cycle . body WHILE LPAREN expression seen_cycle RPAREN SEMICOLON
    (13) body -> . LBRACE return_statement RBRACE

    LBRACE          shift and go to state 14

    body                           shift and go to state 57

state 42

    (30) print -> PRINT seen_print_PRINT . LPAREN list_print_expression RPAREN SEMICOLON
    (31) print -> PRINT seen_print_PRINT . LPAREN list_print_cte RPAREN SEMICOLON

    LPAREN          shift and go to state 58


state 43

    (5) vars -> VAR list_vars COLON type . SEMICOLON

    SEMICOLON       shift and go to state 59


state 44

    (6) vars -> list_vars COLON type SEMICOLON .

    MAIN            reduce using rule 6 (vars -> list_vars COLON type SEMICOLON .)
    VAR             reduce using rule 6 (vars -> list_vars COLON type SEMICOLON .)
    ID              reduce using rule 6 (vars -> list_vars COLON type SEMICOLON .)


state 45

    (19) assign -> ID seen_assign_ID EQUAL . seen_term_EQUAL expression seen_exp_quad_E SEMICOLON
    (21) seen_term_EQUAL -> .

    LPAREN          reduce using rule 21 (seen_term_EQUAL -> .)
    PLUS            reduce using rule 21 (seen_term_EQUAL -> .)
    MINUS           reduce using rule 21 (seen_term_EQUAL -> .)
    ID              reduce using rule 21 (seen_term_EQUAL -> .)
    CTE_INT         reduce using rule 21 (seen_term_EQUAL -> .)
    CTE_FLOAT       reduce using rule 21 (seen_term_EQUAL -> .)

    seen_term_EQUAL                shift and go to state 60

state 46

    (55) factor -> LPAREN . expression RPAREN
    (39) expression -> . exp
    (40) expression -> . exp GT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (41) expression -> . exp LT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (42) expression -> . exp NE seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (45) exp -> . term
    (46) exp -> . exp PLUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (47) exp -> . exp MINUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (50) term -> . factor
    (51) term -> . term TIMES seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (52) term -> . term DIVIDE seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (55) factor -> . LPAREN expression RPAREN
    (56) factor -> . PLUS ID seen_factor_ID verify_declaration
    (57) factor -> . MINUS ID seen_factor_ID verify_declaration
    (58) factor -> . PLUS cte
    (59) factor -> . MINUS cte
    (60) factor -> . ID seen_factor_ID verify_declaration
    (61) factor -> . cte
    (64) cte -> . CTE_INT seen_INT
    (65) cte -> . CTE_FLOAT seen_FLOAT

    LPAREN          shift and go to state 46
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    ID              shift and go to state 53
    CTE_INT         shift and go to state 55
    CTE_FLOAT       shift and go to state 56

    expression                     shift and go to state 61
    exp                            shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 52
    cte                            shift and go to state 54

state 47

    (23) condition -> IF LPAREN expression . seen_condition_IF RPAREN body SEMICOLON
    (24) condition -> IF LPAREN expression . seen_condition_IF RPAREN body ELSE seen_condition_else body SEMICOLON
    (25) seen_condition_IF -> .

    RPAREN          reduce using rule 25 (seen_condition_IF -> .)

    seen_condition_IF              shift and go to state 62

state 48

    (39) expression -> exp .
    (40) expression -> exp . GT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (41) expression -> exp . LT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (42) expression -> exp . NE seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (46) exp -> exp . PLUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (47) exp -> exp . MINUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M

    RPAREN          reduce using rule 39 (expression -> exp .)
    COMMA           reduce using rule 39 (expression -> exp .)
    SEMICOLON       reduce using rule 39 (expression -> exp .)
    GT              shift and go to state 63
    LT              shift and go to state 64
    NE              shift and go to state 65
    PLUS            shift and go to state 66
    MINUS           shift and go to state 67


state 49

    (45) exp -> term .
    (51) term -> term . TIMES seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (52) term -> term . DIVIDE seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D

    GT              reduce using rule 45 (exp -> term .)
    LT              reduce using rule 45 (exp -> term .)
    NE              reduce using rule 45 (exp -> term .)
    PLUS            reduce using rule 45 (exp -> term .)
    MINUS           reduce using rule 45 (exp -> term .)
    RPAREN          reduce using rule 45 (exp -> term .)
    COMMA           reduce using rule 45 (exp -> term .)
    SEMICOLON       reduce using rule 45 (exp -> term .)
    TIMES           shift and go to state 68
    DIVIDE          shift and go to state 69


state 50

    (56) factor -> PLUS . ID seen_factor_ID verify_declaration
    (58) factor -> PLUS . cte
    (64) cte -> . CTE_INT seen_INT
    (65) cte -> . CTE_FLOAT seen_FLOAT

    ID              shift and go to state 70
    CTE_INT         shift and go to state 55
    CTE_FLOAT       shift and go to state 56

    cte                            shift and go to state 71

state 51

    (57) factor -> MINUS . ID seen_factor_ID verify_declaration
    (59) factor -> MINUS . cte
    (64) cte -> . CTE_INT seen_INT
    (65) cte -> . CTE_FLOAT seen_FLOAT

    ID              shift and go to state 72
    CTE_INT         shift and go to state 55
    CTE_FLOAT       shift and go to state 56

    cte                            shift and go to state 73

state 52

    (50) term -> factor .

    TIMES           reduce using rule 50 (term -> factor .)
    DIVIDE          reduce using rule 50 (term -> factor .)
    GT              reduce using rule 50 (term -> factor .)
    LT              reduce using rule 50 (term -> factor .)
    NE              reduce using rule 50 (term -> factor .)
    PLUS            reduce using rule 50 (term -> factor .)
    MINUS           reduce using rule 50 (term -> factor .)
    RPAREN          reduce using rule 50 (term -> factor .)
    COMMA           reduce using rule 50 (term -> factor .)
    SEMICOLON       reduce using rule 50 (term -> factor .)


state 53

    (60) factor -> ID . seen_factor_ID verify_declaration
    (62) seen_factor_ID -> .

    TIMES           reduce using rule 62 (seen_factor_ID -> .)
    DIVIDE          reduce using rule 62 (seen_factor_ID -> .)
    GT              reduce using rule 62 (seen_factor_ID -> .)
    LT              reduce using rule 62 (seen_factor_ID -> .)
    NE              reduce using rule 62 (seen_factor_ID -> .)
    PLUS            reduce using rule 62 (seen_factor_ID -> .)
    MINUS           reduce using rule 62 (seen_factor_ID -> .)
    RPAREN          reduce using rule 62 (seen_factor_ID -> .)
    COMMA           reduce using rule 62 (seen_factor_ID -> .)
    SEMICOLON       reduce using rule 62 (seen_factor_ID -> .)

    seen_factor_ID                 shift and go to state 74

state 54

    (61) factor -> cte .

    TIMES           reduce using rule 61 (factor -> cte .)
    DIVIDE          reduce using rule 61 (factor -> cte .)
    GT              reduce using rule 61 (factor -> cte .)
    LT              reduce using rule 61 (factor -> cte .)
    NE              reduce using rule 61 (factor -> cte .)
    PLUS            reduce using rule 61 (factor -> cte .)
    MINUS           reduce using rule 61 (factor -> cte .)
    RPAREN          reduce using rule 61 (factor -> cte .)
    COMMA           reduce using rule 61 (factor -> cte .)
    SEMICOLON       reduce using rule 61 (factor -> cte .)


state 55

    (64) cte -> CTE_INT . seen_INT
    (66) seen_INT -> .

    TIMES           reduce using rule 66 (seen_INT -> .)
    DIVIDE          reduce using rule 66 (seen_INT -> .)
    GT              reduce using rule 66 (seen_INT -> .)
    LT              reduce using rule 66 (seen_INT -> .)
    NE              reduce using rule 66 (seen_INT -> .)
    PLUS            reduce using rule 66 (seen_INT -> .)
    MINUS           reduce using rule 66 (seen_INT -> .)
    RPAREN          reduce using rule 66 (seen_INT -> .)
    COMMA           reduce using rule 66 (seen_INT -> .)
    SEMICOLON       reduce using rule 66 (seen_INT -> .)

    seen_INT                       shift and go to state 75

state 56

    (65) cte -> CTE_FLOAT . seen_FLOAT
    (67) seen_FLOAT -> .

    TIMES           reduce using rule 67 (seen_FLOAT -> .)
    DIVIDE          reduce using rule 67 (seen_FLOAT -> .)
    GT              reduce using rule 67 (seen_FLOAT -> .)
    LT              reduce using rule 67 (seen_FLOAT -> .)
    NE              reduce using rule 67 (seen_FLOAT -> .)
    PLUS            reduce using rule 67 (seen_FLOAT -> .)
    MINUS           reduce using rule 67 (seen_FLOAT -> .)
    RPAREN          reduce using rule 67 (seen_FLOAT -> .)
    COMMA           reduce using rule 67 (seen_FLOAT -> .)
    SEMICOLON       reduce using rule 67 (seen_FLOAT -> .)

    seen_FLOAT                     shift and go to state 76

state 57

    (27) cycle -> DO seen_start_cycle body . WHILE LPAREN expression seen_cycle RPAREN SEMICOLON

    WHILE           shift and go to state 77


state 58

    (30) print -> PRINT seen_print_PRINT LPAREN . list_print_expression RPAREN SEMICOLON
    (31) print -> PRINT seen_print_PRINT LPAREN . list_print_cte RPAREN SEMICOLON
    (32) list_print_expression -> . expression seen_print_quad_PRINT
    (33) list_print_expression -> . list_print_expression COMMA seen_print_PARINT_COMMA expression seen_print_quad_PRINT
    (34) list_print_cte -> . CTE_STRING
    (35) list_print_cte -> . list_print_cte COMMA CTE_STRING
    (39) expression -> . exp
    (40) expression -> . exp GT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (41) expression -> . exp LT seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (42) expression -> . exp NE seen_exp_GT_LT_NE exp seen_exp_quad_G_L_N
    (45) exp -> . term
    (46) exp -> . exp PLUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (47) exp -> . exp MINUS seen_exp_PLUS_MINUS term seen_exp_quad_P_M
    (50) term -> . factor
    (51) term -> . term TIMES seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (52) term -> . term DIVIDE seen_term_TIMES_DIVIDE factor seen_exp_quad_T_D
    (55) factor -> . LPAREN expression RPAREN
    (56) factor -> . PLUS ID seen_factor_ID verify_declaration
    (57) factor -> . MINUS ID seen_factor_ID verify_declaration
    (58) factor -> . PLUS cte
    (59) factor -> . MINUS cte
    (60) factor -> . ID seen_factor_ID verify_declaration
    (61) factor -> . cte
    (64) cte -> . CTE_INT seen_INT
    (65) cte -> . CTE_FLOAT seen_FLOAT

    CTE_STRING      shift and go to state 81
    LPAREN          shift and go to state 46
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    ID              shift and go to state 53
    CTE_INT         shift and go to state 55
    CTE_FLOAT       shift and go to state 56
